# bahai-api

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/: domains.md  sources.md
src/bahai_api/: main.py
tests/: conftest.py  test_discovery.py  test_healthz.py
